Orders client implementation
